@@ -1,5 +1,5 @@
 """upathlib"""
-__version__ = '0.6.3b2'
+__version__ = '0.6.3b3'
 
 from ._upath import Upath, FileInfo, LockAcquisitionTimeoutError
 from ._local import LocalUpath
